third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/partial_eq/unknown_field_attribute.rs
#[derive(derive_more::PartialEq)]
struct Foo(#[partial_eq(unknown)] i32);

#[derive(derive_more::PartialEq)]
enum Enum {
    Bar { #[partial_eq(unknown)] i: i32 },
}

fn main() {}
